--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+BASE_URL = "https://api.themoviedb.org/3/"
+MOVIE_API_KEY = "681b436ab539d57c9768f90081fc936b"
+
