--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,5 @@ kotlin.code.style=official
 
 BASE_URL = "https://api.themoviedb.org/3/"
 MOVIE_API_KEY = "681b436ab539d57c9768f90081fc936b"
+BASE_IMAGE = "https://image.tmdb.org/t/p/w500"
 
