--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
-
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
@@ -24,11 +24,14 @@ android {
     buildTypes.each {
         it.buildConfigField 'String', 'BASE_URL', BASE_URL
         it.buildConfigField 'String', 'MOVIE_API_KEY', MOVIE_API_KEY
+        it.buildConfigField 'String', 'BASE_IMAGE',BASE_IMAGE
     }
     compileOptions {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
+
+
 
     kotlinOptions {
         jvmTarget = "1.8"
@@ -36,8 +39,13 @@ android {
     androidExtensions {
         experimental = true
     }
-}
 
+}
+ext{
+    archComponentsVersion = '2.0.0'
+    pagingVersion = '2.1.0'
+    lifecycle_version = '2.1.0'
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -59,6 +67,25 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.7.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
     implementation "com.squareup.okhttp3:logging-interceptor:4.3.0"
+
+
+    // architecture components
+    implementation "androidx.lifecycle:lifecycle-extensions:$archComponentsVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime:$archComponentsVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$archComponentsVersion"
+    implementation "androidx.paging:paging-runtime:$pagingVersion"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc03'
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+
+
+    //coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.1"
+
+    //imageLoader
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 
 
 
