--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.harloomDeveloper.moviecatalogharloom">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
 <application
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
+    android:usesCleartextTraffic="true"
     android:theme="@style/AppTheme"
-    tools:ignore="GoogleAppIndexingWarning">
+    tools:ignore="GoogleAppIndexingWarning"
+    tools:targetApi="m">
     <activity android:name=".DetailMovieActivity" />
     <activity android:name=".MenuActivity"
-        android:label="@string/title_activity_menu">
+        android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
+        android:label="@string/app_name">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
