--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     android:theme="@style/AppTheme"
     tools:ignore="GoogleAppIndexingWarning"
     tools:targetApi="m">
-    <activity android:name=".DetailMovieActivity" />
+    <activity android:name=".ui.movie.DetailMovieActivity" />
     <activity android:name=".MenuActivity"
         android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
         android:label="@string/app_name">
@@ -23,7 +23,7 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
     </activity>
-    <activity android:name=".DetailTvShowActivity" />
+    <activity android:name=".ui.televisi.DetailTvShowActivity" />
 </application>
 
 </manifest>
