--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,12 @@ android {
     buildTypes.each {
         it.buildConfigField 'String', 'BASE_URL', BASE_URL
         it.buildConfigField 'String', 'MOVIE_API_KEY', MOVIE_API_KEY
-        it.buildConfigField 'String', 'BASE_IMAGE',BASE_IMAGE
+        it.buildConfigField 'String', 'BASE_IMAGE', BASE_IMAGE
     }
     compileOptions {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
-
 
 
     kotlinOptions {
@@ -41,7 +40,7 @@ android {
     }
 
 }
-ext{
+ext {
     archComponentsVersion = '2.0.0'
     pagingVersion = '2.1.0'
     lifecycle_version = '2.1.0'
@@ -86,7 +85,8 @@ dependencies {
     //imageLoader
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
-
+    implementation 'androidx.room:room-runtime:2.2.3'
+    annotationProcessor 'androidx.room:room-compiler:2.2.3'
 
 
 }
