--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,27 +2,33 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.harloomDeveloper.moviecatalogharloom">
-    <uses-permission android:name="android.permission.INTERNET"/>
-<application
-    android:allowBackup="true"
-    android:icon="@mipmap/ic_launcher"
-    android:label="@string/app_name"
-    android:roundIcon="@mipmap/ic_launcher_round"
-    android:supportsRtl="true"
-    android:usesCleartextTraffic="true"
-    android:theme="@style/AppTheme"
-    tools:ignore="GoogleAppIndexingWarning"
-    tools:targetApi="m">
-    <activity android:name=".ui.movie.DetailMovieActivity" />
-    <activity android:name=".MenuActivity"
-        android:label="@string/app_name">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
-    <activity android:name=".ui.televisi.DetailTvShowActivity" />
-</application>
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
+        tools:ignore="GoogleAppIndexingWarning"
+        tools:targetApi="m">
+        <activity
+            android:name=".ui.favorit.FavoritActivity"
+            android:label="@string/title_activity_favorit" />
+        <activity android:name=".ui.movie.DetailMovieActivity" />
+        <activity
+            android:name=".MenuActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ui.televisi.DetailTvShowActivity" />
+    </application>
 
 </manifest>
