--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,5 +88,8 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.2.3'
     annotationProcessor 'androidx.room:room-compiler:2.2.3'
 
+    //lib UI
+    implementation 'com.github.jd-alexander:LikeButton:0.2.3'
+
 
 }
