--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ android {
 }
 ext {
     archComponentsVersion = '2.0.0'
-    pagingVersion = '2.1.0'
+    pagingVersion = '2.1.1'
     lifecycle_version = '2.1.0'
 }
 dependencies {
@@ -54,7 +54,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
     implementation 'androidx.navigation:navigation-ui:2.1.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+
     implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.1.0'
     testImplementation 'junit:junit:4.12'
@@ -75,6 +75,8 @@ dependencies {
     implementation "androidx.paging:paging-runtime:$pagingVersion"
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc03'
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+
 
 
     //coroutines
@@ -85,8 +87,17 @@ dependencies {
     //imageLoader
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+
+
+    // Extensions = ViewModel + LiveData
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    kapt "androidx.room:room-compiler:2.2.3"
+
+    //room
+    implementation "androidx.room:room-ktx:2.2.3"
     implementation 'androidx.room:room-runtime:2.2.3'
-    annotationProcessor 'androidx.room:room-compiler:2.2.3'
+//    kapt 'android.arch.persistence.room:compiler:1.1.1'
+
 
     //lib UI
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
