--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,15 +92,17 @@ dependencies {
     // Extensions = ViewModel + LiveData
     implementation "android.arch.lifecycle:extensions:1.1.1"
     kapt "androidx.room:room-compiler:2.2.3"
-
+    annotationProcessor "androidx.room:room-compiler:2.2.3"
     //room
     implementation "androidx.room:room-ktx:2.2.3"
     implementation 'androidx.room:room-runtime:2.2.3'
-//    kapt 'android.arch.persistence.room:compiler:1.1.1'
+    implementation 'androidx.room:room-rxjava2:2.2.3'
+
 
 
     //lib UI
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
+    implementation 'com.afollestad.material-dialogs:core:3.1.1'
 
 
 }
