--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="m">
+        <activity android:name=".ui.favorit.DetailFavorit"></activity>
         <activity
             android:name=".ui.favorit.FavoritActivity"
             android:label="@string/title_activity_favorit" />
