--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+
     <application
         android:name=".MainApp"
         android:allowBackup="true"
@@ -49,6 +50,8 @@
             android:name=".utils.ReminderReciver"
             android:enabled="true"
             android:exported="true" />
+        <service android:name=".data.service.StackWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS"/>
     </application>
 
 </manifest>
