--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:name=".MainApp"
         android:allowBackup="true"
@@ -17,15 +16,22 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="m">
-        <receiver android:name=".ui.widget.MyMovie">
+        <receiver android:name=".widgets.BannerWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
 
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/my_movie_info" />
+                android:resource="@xml/banner_widget_info" />
         </receiver>
+
+        <provider
+            android:name=".data.local.provider.FavoritProvider"
+            android:authorities="com.harloomDeveloper.moviecatalogharloom"
+            android:readPermission="com.dicoding.mynotesapp.READ_DATABASE"
+            android:enabled="true"
+            android:exported="true" />
 
         <activity
             android:name=".ui.preference.SettingsActivity"
@@ -50,7 +56,7 @@
             android:name=".utils.ReminderReciver"
             android:enabled="true"
             android:exported="true" />
-        <service android:name=".data.service.StackWidgetService"
+        <service android:name=".widgets.StackWidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS"/>
     </application>
 
